fixed css:scrollbar,button,tables

--- a/assets/opstools/FCFActivities/FCFActivities.css
+++ b/assets/opstools/FCFActivities/FCFActivities.css
@@ -1,10 +1,12 @@
+
+
 .input-group .form-control {
 	margin-bottom: -6px
 }
 
 .fixed-table-body {
     overflow: auto;
-    height: 200px;
+    height: 160px;
 }
 
 .fcf-list-rowH4 {
